Add a new line #5

--- a/_posts/0000-01-02-abvesper.md
+++ b/_posts/0000-01-02-abvesper.md
@@ -2,5 +2,5 @@
 layout: slide
 title: “Welcome to our second slide!”
 ---
-Your test
+This is the new line I am adding to my file.
 Use the left arrow to go back!
